src/objects/Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>Dentures__c</fullName>
        <label>Dentures</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Depression_History__c</fullName>
        <label>Depression History</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Depression_Patient_received_Treatment__c</fullName>
        <label>Depression Patient Received Treatment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depression_desire_to_hurt_themsleves__c</fullName>
        <label>Depression Desire to Hurt Him/Herself</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Desire_to_hurt_themselves__c</fullName>
        <label>Desire to Hurt Him/Herself</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Details_Section_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Details Section Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diabetic__c</fullName>
        <label>Diabetic</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DiagnosisIsolation_Type__c</fullName>
        <label>Isolation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Droplet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diagnostics_Comments__c</fullName>
        <label>Diagnostics Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagnostics_GYN_Experiences__c</fullName>
        <label>Diagnostics GYN Experiences</label>
        <picklist>
            <picklistValues>
                <fullName>Delayed Onset of Puberty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Span of Several Months without Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menopause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History of Implants</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Diagnostics_Section_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagnostics Section Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dialysis_Days_of_the_Week__c</fullName>
        <label>Dialysis Days of the Week</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dialysis_Onset__c</fullName>
        <label>Dialysis Onset</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dialysis_Picklist__c</fullName>
        <label>Dialysis Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dialysis_Type_Details__c</fullName>
        <label>Dialysis Type Details</label>
        <picklist>
            <picklistValues>
                <fullName>Hemo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peritoneal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dialysis_Type__c</fullName>
        <label>Dialysis Type</label>
        <picklist>
            <picklistValues>
                <fullName>Chronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dialysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dialysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diet__c</fullName>
        <label>Diet</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dietary_supplement_describe__c</fullName>
        <label>Dietary supplement describe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diplopia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diplopia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discharge_Info_From__c</fullName>
        <label>Discharge Info From</label>
        <picklist>
            <picklistValues>
                <fullName>Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discharge_Nursing__c</fullName>
        <label>Nursing</label>
        <picklist>
            <picklistValues>
                <fullName>Daily Medication/Pain Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor and Manage Nutritional Intake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintain Skin Integrity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wound Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bowel/Bladder/Toileting Retraining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trach Care and Weaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vent Care and Weaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carry Over Recommendations by Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pt and Family Education/Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Discharge_OT__c</fullName>
        <label>OT</label>
        <picklist>
            <picklistValues>
                <fullName>ADL Retraining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feeding Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Transfer Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UE Functional Retraining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Endurance Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapeutic Positioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognitive and Perceptual Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Reintegration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Eval and Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casting / Splinting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pt and Family Education/Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Discharge_PT__c</fullName>
        <label>PT</label>
        <picklist>
            <picklistValues>
                <fullName>Theraputic Exercise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed Mobility Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheelchair Mobility Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progressive Gait Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapeutic Positioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop Upright Tolerance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breathing Reeducation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Eval and Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Program Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pt and Family Education/Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Discharge_Physician__c</fullName>
        <label>Physician</label>
        <picklist>
            <picklistValues>
                <fullName>Oversees and Coordinates Patient Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Necessary Diagnostic Tests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trach and Vent Weaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wean G Tube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage Nutrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wean IV s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage Infection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sleep Regulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pain Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review/Adjust Medications as needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R/O Causes for Failure to Improve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprehensive Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Discharge_Plan_Comments__c</fullName>
        <label>Discharge Plan Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discharge_Plan_Home_Situation__c</fullName>
        <label>Discharge Plan/Home Situation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discharge_ST__c</fullName>
        <label>ST</label>
        <picklist>
            <picklistValues>
                <fullName>Speech Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognitive Linguistic Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swallow Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sensory Stimulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Augmentative Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pt and Family Education/Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Discharge_Section_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discharge Plan Section Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discharge_To_Other__c</fullName>
        <label>Discharge To Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discharge_To__c</fullName>
        <label>Discharge To</label>
        <picklist>
            <picklistValues>
                <fullName>Acute Rehab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board &amp; Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House/Condo/Apt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motel/Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Distance_Details__c</fullName>
        <label>Distance/Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_Resident_appear_to_demonstrate__c</fullName>
        <label>Resident appear to demonstrate Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domestic_Abuse_Describe__c</fullName>
        <label>Domestic Abuse Describe</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domestic_Abuse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domestic Abuse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dressing_LE__c</fullName>
        <label>Dressing LE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dressing_UE__c</fullName>
        <label>Dressing UE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Abuse_Describe__c</fullName>
        <label>Drug Abuse Describe</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drug_Abuse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drug Abuse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_of_Incontinence__c</fullName>
        <label>Duration of Incontinence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dysphagia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dysphagia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dysreflexia_Issue_Describe__c</fullName>
        <label>Dysreflexia Issue Describe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dysreflexia_issue_resolved__c</fullName>
        <label>Dysreflexia issue resolved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EEG_Above_Normal_Limits__c</fullName>
        <label>EEG Above Normal Limits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEG_Within_Normal_Limits__c</fullName>
        <label>EEG Within Normal Limits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEG__c</fullName>
        <label>EEG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EKG__c</fullName>
        <label>EKG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELOS__c</fullName>
        <label>ELOS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ear_Infections__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ear Infections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ear_infection_Describe__c</fullName>
        <label>Ear Infection Describe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Educated_Regarding_AD__c</fullName>
        <label>Educated Regarding AD</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Elastic_Hose__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elastic Hose</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elevator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elevator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elimination_Bladder_Continent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incontinent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elimination_Bladder_No_Continent_Details__c</fullName>
        <label>Elimination Bladder No Continent Details</label>
        <picklist>
            <picklistValues>
                <fullName>Condom Catheter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foley Catheter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suprapubic Catheter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ileal Conduit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indwelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indwelling Foley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suprapubic Foley</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Elimination_Bowel_Continent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incontinent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elimination_Bowel_No_Appliance_Other__c</fullName>
        <label>Elimination Bowel No Appliance Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elimination_Bowel_No_Continent_Appliance__c</fullName>
        <label>Elimination Bowel No Continent Appliance</label>
        <picklist>
            <picklistValues>
                <fullName>Depends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colostomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iliostomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Elimination_Bowel_Program_Type__c</fullName>
        <label>Elimination Bowel Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suppository</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Stimulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Evacuation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Elimination_Bowel_Status__c</fullName>
        <label>Elimination Bowel Status</label>
        <picklist>
            <picklistValues>
                <fullName>Continent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incontinent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colostomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iliostomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Elopement_Risk_Describe__c</fullName>
        <label>Elopement Risk Describe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elopement_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elopement Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmploymentDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field includes one of the employment Status on the Detail Tab of the evaluation VF page.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmploymentFT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field includes one of the employment Status on the Detail Tab of the evaluation VF page.</description>
        <label>FT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmploymentPT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field includes one of the employment Status on the Detail Tab of the evaluation VF page.</description>
        <label>PT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmploymentRetired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field includes one of the employment Status on the Detail Tab of the evaluation VF page.</description>
        <label>Retired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmploymentUnknown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field includes one of the employment Status on the Detail Tab of the evaluation VF page.</description>
        <label>Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>FT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Enclosure_Bed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enclosure Bed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enclosure_Bed_can_be_removed__c</fullName>
        <label>Enclosure Bed Can Be Removed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enclosure_bed_restrict_freedom__c</fullName>
        <label>Enclosure Bed Restrict Freedom</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Endovascular_Filter__c</fullName>
        <label>Endovascular Filter</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Endurance__c</fullName>
        <label>Endurance</label>
        <picklist>
            <picklistValues>
                <fullName>Impaired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Tested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enema_or_Suppository_use_Describe__c</fullName>
        <label>Enema or Suppository use Describe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Date__c</fullName>
        <label>Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expression_Other__c</fullName>
        <label>Expression Other</label>
        <picklist>
            <picklistValues>
                <fullName>Gesture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sign Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Expression__c</fullName>
        <label>Expression</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aphasic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dysphasic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age Appropriate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expressive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expressive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Device_Picklist__c</fullName>
        <label>External Device Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Devices_Location__c</fullName>
        <label>External Devices Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Devices_Pin_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Devices Pin Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Devices_Type__c</fullName>
        <label>External Devices Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Devices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Devices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FIO2__c</fullName>
        <label>FIO2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Commu_Status_other__c</fullName>
        <label>Family Commu. Status other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>